# rs42935ResearchSum2018

appdirectory/: #Makefile#  BaseApplication.cpp  Makefile  Makefile.am  Makefile.in  OBObj.cpp  OgreApp  Wrapper.cpp  config.status  libtool  ogre.cfg
appdirectory/.deps/: OgreApp-BaseApplication.Po  OgreApp-KinematicMotionState.Po  OgreApp-OBObj.Po  OgreApp-PhysObj.Po  OgreApp-TutorialApplication.Po  OgreApp-Wrapper.Po  OgreApp-btAlignedAllocator.Po
appdirectory/autom4te.cache/: requests
appdirectory/oldcode/: BaseApplication.cpp  BaseApplication.h  KinematicMotionState.cpp  OBObj.cpp  Wrapper.cpp
